# Simple-Neural-Network

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test
src/: activation.h  controlsRenderer.cpp  controlsRenderer.h  dataset.cpp  dataset.h  layer.cpp  layer.h  lossRenderer.cpp  lossRenderer.h  main.cpp  network.cpp  network.h  networkRenderer.cpp  networkRenderer.h  orchestrator.cpp  utils.cpp  utils.h  visualizer.cpp  visualizer.h
